# wayland_sample

./: CMakeLists.txt  Makefile  README.md  main.c  main.cpp
src/: CMakeLists.txt
src/hello/: CMakeLists.txt
src/wayegl/: CMakeLists.txt  gl_renderer.h  main.cpp  wayland_window.h
src/wayegl2/: CMakeLists.txt  gl_renderer.cpp  wayland_window.cpp
